# AIM

./: .gitignore  CLEANUP_GUIDE.md  README.md
artifacts/ultimentality-pilot/: current-plan.md  roadmap.md
artifacts/ultimentality-pilot/baseline/: clean-splcw-harness-2026-04-03.md
artifacts/ultimentality-pilot/memory/: memory.md  os.md
artifacts/ultimentality-pilot/results/: goalscope-enactment-map.md  live-host-backend-smoke.md  reference-synthesis.md
offload/current/: handoff.md  open-gaps.md  plan.md
ultimentality-pilot/harness/: ARCHITECTURE.md  Cargo.toml  Launch AGRO Harness Operator.cmd  README.md
ultimentality-pilot/harness/crates/splcw-computer-use/: Cargo.toml
ultimentality-pilot/harness/crates/splcw-computer-use/src/: lib.rs
ultimentality-pilot/harness/crates/splcw-core/: Cargo.toml
ultimentality-pilot/harness/crates/splcw-core/src/: lib.rs
ultimentality-pilot/harness/crates/splcw-host/: Cargo.toml
ultimentality-pilot/harness/crates/splcw-host/src/: backend.rs  command_host.rs  embedded_host.rs  lib.rs
ultimentality-pilot/harness/crates/splcw-llm/: Cargo.toml
ultimentality-pilot/harness/crates/splcw-llm/src/: auth_store.rs  client.rs  lib.rs  providers.rs
ultimentality-pilot/harness/crates/splcw-memory/: Cargo.toml
ultimentality-pilot/harness/crates/splcw-memory/src/: lib.rs  offload.rs  sqlite_store.rs
ultimentality-pilot/harness/crates/splcw-operator-gui/: Cargo.toml
ultimentality-pilot/harness/crates/splcw-operator-gui/src/: main.rs  resident_transport.rs  shell.rs
ultimentality-pilot/harness/crates/splcw-orchestrator/: Cargo.toml
ultimentality-pilot/harness/crates/splcw-orchestrator/src/: compaction_publisher.rs  gap_task_emitter.rs  host_verify_retry.rs  lib.rs  resident_transport.rs  runtime.rs  session.rs
ultimentality-pilot/harness/scripts/: launch-operator-gui.ps1  package-operator-gui.ps1
