[workspace]
members = [
    "crates/splcw-core",
    "crates/splcw-memory",
    "crates/splcw-computer-use",
    "crates/splcw-host",
    "crates/splcw-llm",
    "crates/splcw-orchestrator",
    "crates/splcw-operator-gui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Jessy + Codex"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
