[package]
name = "splcw-computer-use"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
splcw-core = { path = "../splcw-core" }
uuid.workspace = true
