[package]
name = "splcw-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
splcw-computer-use = { path = "../splcw-computer-use" }
tokio.workspace = true
uuid.workspace = true
