[package]
name = "splcw-operator-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
gpui = "0.2.2"
gpui-component = "0.5.1"
sysinfo = "0.37"
splcw-core = { path = "../splcw-core" }
splcw-host = { path = "../splcw-host" }
splcw-llm = { path = "../splcw-llm" }
splcw-memory = { path = "../splcw-memory" }
splcw-orchestrator = { path = "../splcw-orchestrator" }

[dev-dependencies]
tempfile = "3"
